<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    android:backgroundTintMode="screen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainNav$PlaceholderFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:autoText="false"
                android:password="false"
                android:phoneNumber="false"
                android:text="@string/questionLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#00A9FF"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/questionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/question"
                android:layout_toRightOf="@+id/question"
                android:autoText="false"
                android:password="false"
                android:phoneNumber="false"
                android:text="@string/questionNumber"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#00A9FF"
                android:textSize="40dp" />

            <RelativeLayout
                android:id="@+id/qRectangleBg"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/question"
                android:background="@drawable/rectangle">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    android:background="#c7c7c7"
                    android:text="@string/question"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="22dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/choices"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="200dp">

                <ImageButton
                    android:id="@+id/yesButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/yes" />

                <ImageButton
                    android:id="@+id/noButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/no" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:progress="@string/progressPercent"
            android:progressTint="#00A9FF"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:text="@string/progressText"
            android:textAppearance="?android:attr/textAppearanceSmall" />


    </RelativeLayout>

</RelativeLayout>



