<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".fragments.ProductFragment"
                android:backgroundTintMode="screen"
                android:background="#DDDDDD"
                android:id="@+id/main">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_marginBottom="40dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Your Product:"
                android:id="@+id/question"
                android:autoText="false"
                android:password="false"
                android:phoneNumber="false"
                android:textColor="#00A9FF"
                android:textSize="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RelativeLayout
                android:id="@+id/qRectangleBg"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/rectangle"
                android:layout_below="@+id/question"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/prodName"
                    android:id="@+id/textView"
                    android:background="#c7c7c7"
                    android:textSize="22dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/rectangle"
                android:layout_below="@+id/question"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/prodDesc"
                    android:id="@+id/textView4"
                    android:background="#c7c7c7"
                    android:textSize="22dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/rectangle"
                android:layout_below="@+id/question"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="140dp" >

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:id="@+id/imageView2"
                    android:src="@drawable/xbox"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/rectangle"
                android:layout_below="@+id/question"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="400dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/prodLink"
                    android:id="@+id/textView5"
                    android:background="#c7c7c7"
                    android:textSize="22dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:linksClickable="true"
                    android:longClickable="false" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>